<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/secundaria2"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingTop="30dp"
        >

        <TextView
            android:text="@string/TituloMerc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffd648"
            android:gravity="center_horizontal"
            android:textColor="#010000"/>

    </LinearLayout>


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="30dp"
        android:gravity="center"
        android:weightSum="1">

        <TextView android:text="@string/PesoMerc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#010000"
            android:paddingLeft="10dp"
            android:layout_weight="0.54" />

        <EditText
            android:id="@+id/editPeso"
            android:layout_width="172dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.29" />

    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:gravity="center"
        android:weightSum="1">


        <TextView android:text="@string/VolMerc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#010000"
            android:paddingLeft="10dp"
            android:layout_weight="0.51" />

        <EditText
            android:id="@+id/editVolume"
            android:layout_width="174dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.34" />

    </LinearLayout>




    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:gravity="center"
        android:weightSum="1">


        <TextView android:text="@string/PeriMerc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#010000"
            android:paddingLeft="10dp" />

        <Spinner
            android:id="@+id/editPericulo"
            android:layout_width="200dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:gravity="center"
        android:weightSum="1">


        <TextView android:text="@string/TipoMerc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#010000"
            android:paddingLeft="10dp"
            android:layout_weight="0.52" />

        <Spinner
            android:id="@+id/editTipo"
            android:layout_width="171dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25" />

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingTop="30dp"
        android:gravity="center_horizontal">

        <Button
            android:text="Terminar"
            android:id="@+id/btnEnviar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp" />


    </LinearLayout>

    </LinearLayout>
</ScrollView>
