<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/secundaria2"
    android:orientation="vertical"

    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#7c109fff"
        android:paddingTop="20dp"
        >

        <TextView
            android:text="@string/TituloCad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffd648"
            android:gravity="center_horizontal"
            android:textColor="#010000"/>

    </LinearLayout>
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#7c109fff">
<RadioGroup
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:id="@+id/editSexo">

        <RadioButton
            android:id="@+id/editSexMasc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Masculino"/>

        <RadioButton
            android:id="@+id/editSexFem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Feminino"/>
</RadioGroup>


    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#7c109fff"
        android:weightSum="1">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/editTipo">

        <RadioButton
            android:id="@+id/editCadEntreg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Entregador"/>

        <RadioButton
            android:id="@+id/editCadCli"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cliente" />

</RadioGroup>
    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#7c109fff"
        android:gravity="center"
        android:weightSum="1">

        <TextView android:text="@string/NomeCad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#010000"
            android:paddingLeft="10dp"
            android:layout_weight="0.76"
            />

        <EditText
            android:id="@+id/editNome"
            android:layout_width="206dp"
            android:layout_height="wrap_content"
            android:hint="*Nome"/>

    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:background="#7c109fff"
        android:gravity="center"
        android:weightSum="1">


        <TextView android:text="@string/EnderecoCad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#010000"
            android:paddingLeft="10dp"
            android:layout_weight="0.30" />

        <EditText
            android:id="@+id/editEndereco"
            android:layout_width="205dp"
            android:layout_height="wrap_content" />

    </LinearLayout>




    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:background="#7c109fff"
        android:gravity="center"
        android:weightSum="1">


        <TextView android:text="@string/IdadeCad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#010000"
            android:paddingLeft="10dp"
            android:layout_weight="0.66" />

        <EditText
            android:id="@+id/editIdade"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.13"
            android:editable="false"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:background="#7c109fff"
        android:gravity="center"
        android:weightSum="1">


        <TextView android:text="@string/UsuarioCad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#010000"
            android:paddingLeft="10dp"
            android:layout_weight="0.66" />

        <EditText
            android:id="@+id/editUsuario"
            android:layout_width="206dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:background="#7c109fff"
        android:gravity="center"
        android:weightSum="1">


        <TextView android:text="@string/SenhaCad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#010000"
            android:paddingLeft="10dp"
            android:layout_weight="0.66" />

        <EditText
            android:id="@+id/editSenha"
            android:layout_width="204dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            />

    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:background="#7c109fff"
        android:gravity="center"
        android:weightSum="1">


        <TextView android:text="@string/CNPJCad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#010000"
            android:paddingLeft="10dp"
            android:layout_weight="0.66" />

        <EditText
            android:id="@+id/editCNPJ"
            android:layout_width="202dp"
            android:layout_height="wrap_content" />

    </LinearLayout>
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:background="#7c109fff"
        android:gravity="center"
        android:weightSum="1">


        <TextView android:text="@string/CPFCad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#010000"
            android:paddingLeft="10dp"
            android:layout_weight="0.82" />

        <EditText
            android:id="@+id/editCPF"
            android:layout_width="206dp"
            android:layout_height="wrap_content" />

    </LinearLayout>
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:background="#7c109fff"
        android:gravity="center"
        android:weightSum="1">


        <TextView android:text="@string/EstadoCad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#010000"
            android:paddingLeft="10dp"
            android:layout_weight="0.66" />

        <EditText
            android:id="@+id/editEstado"
            android:layout_width="203dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.10" />

    </LinearLayout>
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:background="#7c109fff"
        android:gravity="center"
        android:weightSum="1">


        <TextView android:text="@string/CidadeCad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#010000"
            android:paddingLeft="10dp"
            android:layout_weight="0.66" />

        <EditText
            android:id="@+id/editCidade"
            android:layout_width="204dp"
            android:layout_height="wrap_content" />

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dp"
        android:background="#7c109fff"
        android:gravity="top|center"
       >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="Encerrar Conta"
            android:id="@+id/btnExcluir" />




    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="88dp"
        android:orientation="horizontal"
        android:paddingTop="2dp"
        android:background="#7c109fff"
        android:gravity="top|center"
        >


    <Button
        android:id="@+id/btnConsultar"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:text="Consultar"
         />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="Voltar"
            android:id="@+id/btnCadVolt" />


    </LinearLayout>
    </LinearLayout>

</ScrollView>
